# advent-of-code

./: .gitignore  README.md  pyproject.toml
2015/day1/: part1.py  part2.py
2015/day2/: part1.py  part2.py
2015/day3/: part1.py
2021/day1/: part1.py  part2.py
2021/day2/: part1.py  part2.py
2021/day3/: part1.py  part2.py
2021/day6/: part1.py  part2.py
2021/day7/: part1.py  part2.py
2021/day8/: part1.py
