[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Conor Scheidt <conelul@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.3"
aocd = "^0.1"
browser-cookie3 = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
