[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Conor Scheidt <conelul@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aocd = "^0.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
